fdo#70160: Revert "Sidebar: Correcting anomalous mouse behaviour while resizing"

Let's revert this for the time being, before we have the full solution that
works both for sidebars, as well as for the normal docked windows.

This reverts commit 16ea2dc1f572d698923c770a2a58f7ab402d1298.